samples/_failures_safe/1761719385_23c8c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7fd3252.c: In function ‘main’:
./samples/SAFE/__tmp_b7fd3252.c:157:13: error: expected declaration or statement at end of input
  157 |             printf("Negative weights not allowed\n");
      |             ^~~~~~
./samples/SAFE/__tmp_b7fd3252.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7fd3252.c:157:13: error: expected declaration or statement at end of input
